--- a/backend/apps/hospital/templates/include/headers.html
+++ b/backend/apps/hospital/templates/include/headers.html
@@ -25,7 +25,7 @@
             <a href="{% url 'register' %}">Регистрация</a>
           </div>
           <div class="header-link">
-            <a href="{% url 'dispatching_m_p' %}">Пациенты</a>
+            <a href="{% url 'patients_m_p' %}">Пациенты</a>
           </div>
           <div class="header-link header-link--display">
             <a href="{% url 'events' %}">События</a>
