--- a/backend/apps/hospital/templates/Hospital/patients-search.html
+++ b/backend/apps/hospital/templates/Hospital/patients-search.html
@@ -326,16 +326,7 @@
                 style="margin-left: 30px"
               >
                 <p class="search-details__select-title">Отъезд с:</p>
-                <select
-                  class="form-select"
-                  style="width: 130px"
-                  aria-label="Default select example"
-                >
-                  <option selected>Выберите дату</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                </select>
+                <input type="date">
               </div>
               <div
                 class="search-details__form-select"
